--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Direct Swift
-*.* linguist-language=Swift
+*.swift linguist-detectable=true
+ *.m  linguist-detectable=false
+ *.h  linguist-detectable=false
